# common-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: INTEGRATION_GUIDE.md
examples/: basic.py
examples/docker/: Dockerfile  README.md  docker-compose.yml
src/common_mcp_server/: __init__.py  auth.py  oauth.py  protocol.py  server.py
