[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-mcp-server"
version = "1.0.0"
description = "Production-ready HTTP MCP server framework with dual authentication (OAuth 2.1 + PAT)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Originate Group", email = "info@originate.group"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
keywords = ["mcp", "model-context-protocol", "fastapi", "oauth", "anthropic", "claude"]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/Originate-Group/common-mcp-server"
Documentation = "https://github.com/Originate-Group/common-mcp-server#readme"
Repository = "https://github.com/Originate-Group/common-mcp-server"
Issues = "https://github.com/Originate-Group/common-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
